<resources>
    <string name="app_name">MeetWithMe</string>

    <string name="navigation_drawer_open">Otwórz menu nawigacji</string>
    <string name="navigation_drawer_close">Zamknij menu nawigacji</string>

    <string name="action_settings">Ustawienia</string>

    <string name="facebook_app_id">1762132894115054</string>
    <string name="author">Autor wydarzenia</string>
    <string name="event_desc">Opis wydarzenia</string>
    <string name="send">Wyślij</string>
    <string name="sent">Wysłano</string>
    <string name="Loading_data">Ładowanie danych...</string>
    <string name="show_events">Wyświetl wydarzenia</string>
    <string name="add_event">Dodaj wydarzenie</string>
    <string name="show_map">Pokaż mapę</string>
    <string name="title">Tytuł wydarzenia</string>
    <string name="event_deleted">Usunięto wydarzenie</string>
    <string name="show_EventsMap">Mapa wydarzeń</string>
    <string name="no_data_avalible">Upsss… \n Coś poszło nie tak :(\n\n Przeciągnij w dół aby odświeżyć</string>
    <string name="evants_map">Mapa wydarzeń</string>
    <string name="join">Dołącz</string>
    <string name="joined">Dołączono</string>
    <string name="choose_event_location">Wybierz lokalizajcę wydarzenia</string>
    <string name="error">Błąd</string>
    <string name="delete">Usuń</string>
    <string name="time">Data wydarzenia</string>
    <string name="Success">Wysłano</string>
    <string name="Loading">Czekaj...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="your_events">Twoje wydarzenia</string>
    <string name="login_to_add_events">Zaloguj się aby móc dodawać wydarzenia</string>
    <string name="Unsubscribe">Wypisz się</string>
    <string name="event_unsubscribed">Wypisano z wydarzenia</string>
    <string name="choose_event_date">Wybierz datę wydarzenia</string>
    <string name="my_events">Moje wydarzenia</string>
    <string name="facebook_login_info">Aby móc dodawać wydarzenia i do nich dołączać konieczne jest zalogowanie się do aplikacji poprzez Twoje konto Facebook. Nie udostepniamy nic na Twoje tablicy.</string>
    <string name="avatar">Avatar</string>
    <string name="see_who_join">Zobacz kto dołączył</string>
    <string name="event_tags">Tagi, oddzielone przecinkami</string>
    <string name="write_event_tag">Podaj tag wydarzenia</string>

</resources>
