<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_event"
            android:title="@string/show_events" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_add_alert"
            android:title="@string/add_event" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_event_available"
            android:title="@string/my_events" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_near_me"
            android:title="@string/evants_map" />
    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="none">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_send"
                android:title="Zaloguj" />
    </group>

</menu>
