<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/d_CommentDetailsLinearLayout"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetailsActivity"
    android:gravity="center_horizontal"
    android:background="@color/cardview_light_background"
    android:name="com.google.android.gms.maps.SupportMapFragment">


    <TextView
        android:id="@+id/d_textViewTitle"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/d_textViewAuthor"
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/d_textViewDesc"
        android:text="@string/event_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/d_textViewTime"
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"/>


    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="wrap_content">
        <Button
            android:id="@+id/join_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join"
            android:onClick="onJoinEventClick"/>

        <Button
            android:id="@+id/delete_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:onClick="onDeleteEventClick"/>

        <Button
            android:id="@+id/unsubscribe_event_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Unsubscribe"
            android:onClick="onUnsubscribeEventClick"/>

    </LinearLayout>

    <fragment
        android:id="@+id/map2"
        class="com.google.android.gms.maps.SupportMapFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
