<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    tools:context="com.nowakowski.krzysztof95.navigationdrawerapp.AddCommentFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleEditText"
        android:hint="@string/title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/authorEditText"
        android:hint="@string/author"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:id="@+id/descEditText"
        android:hint="@string/event_desc"/>


    <com.google.android.gms.maps.MapView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/map1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendButton"
        android:layout_gravity="center"
        android:text="@string/send"/>
</LinearLayout>
